<resources>
    <string name="app_name">oneMarket</string>
    <string name="nav_home">Əsas</string>
    <string name="nav_catalog">Kataloq</string>
    <string name="nav_favorites">Seçilmişlər</string>
    <string name="nav_cart">Səbət</string>
    <string name="nav_profile">Kabinet</string>
    <string name="lang_select_title">Dili seçin</string>
    <string name="lang_azerbaijani">Azərbaycan</string>
    <string name="lang_english">English</string>
    <string name="profile_title">Kabinet</string>
    <string name="profile_orders">Sifarişlərim</string>
    <string name="profile_cards">Mənim kartlarım</string>
    <string name="profile_returns">Geri qaytarma müraciətləri</string>
    <string name="profile_addresses">Sifarişlərin çatdırılması üçün ünvanlarım</string>
    <string name="profile_promo">Promokodlar</string>
    <string name="profile_reviews">Rəylərim</string>
    <string name="profile_extra">Əlavə xidmətlər</string>
    <string name="profile_credit">Kredit müraciətləri</string>
    <string name="profile_settings">Parametrlər</string>
    <string name="profile_city">Şəhər</string>
    <string name="profile_language">Dil</string>
    <string name="profile_notifications">Bildirişlər</string>
    <string name="profile_support">Müştəri dəstəyi</string>
    <string name="profile_service_centers">Servis mərkəzləri</string>
    <string name="profile_delivery_payment">Çatdırılma və ödəmə</string>
    <string name="profile_pickup">Məhsul götürmə məntəqələri</string>
    <string name="profile_faq">Tez-tez verilən suallar</string>
    <string name="profile_logout">Çıxış</string>
    <string name="profile_delete_account">Hesabı sil</string>
    <string name="profile_help">Kömək</string>
    <string name="login_title">Daxil olun</string>
    <string name="login_subtitle">Alış-verişdən maksimum yararlanmaq üçün hesabınıza daxil olun</string>
    <string name="btn_login">Daxil ol</string>
    <string name="home_title">Əsas</string>
    <string name="catalog_title">Kataloq</string>
    <string name="favorites_title">Seçilmişlər</string>
    <string name="cart_title">Səbət</string>
    <string name="btn_add_to_cart">Səbətə əlavə et</string>
    <string name="btn_buy_now">İndi al</string>
    <string name="btn_cancel">Ləğv et</string>
    <string name="btn_confirm">Təsdiq et</string>
    <string name="btn_save">Yadda saxla</string>
    <string name="btn_delete">Sil</string>
    <string name="btn_back">Geri</string>
    <string name="btn_next">İrəli</string>
    <string name="btn_close">Bağla</string>
    <string name="cart_empty">Səbətiniz boşdur</string>
    <string name="favorites_empty">Seçilmişlər boşdur</string>
    <string name="order_my_orders">Sifarişlərim</string>
    <string name="order_detail">Sifariş detalları</string>
    <string name="order_status_paid">Ödənilib</string>
    <string name="order_status_pending">Gözlənilir</string>
    <string name="order_status_cancelled">Ləğv edilib</string>
    <string name="order_cancel">Sifarişi ləğv et</string>
    <string name="order_total">Cəmi</string>
    <string name="order_delivery">Çatdırılma</string>
    <string name="payment_title">Ödəniş</string>
    <string name="payment_card_number">Kart nömrəsi</string>
    <string name="payment_expiry">Son istifadə tarixi</string>
    <string name="payment_cvv">CVV2</string>
    <string name="payment_holder">Kart sahibinin adı</string>
    <string name="payment_pay">Ödə</string>
    <string name="search_hint">Məhsul axtar…</string>
    <string name="notification_title">Bildirişlər</string>
    <string name="notification_empty">Bildiriş yoxdur</string>
    <string name="notification_tab_all">Hamısı</string>
    <string name="notification_tab_orders">Sifarişlər</string>
    <string name="delete_account_title">Hesabın silinməsi</string>
    <string name="delete_account_warning_title">Diqqət!</string>
    <string name="delete_account_warning_body">Hesabın silinməsindən sonra onu bərpa etmək mümkün olmayacaq. Hesabın silinməsindən sonra siz artıq Birmarket Premium abunəliyinin yığılmış bonuslarından və üstünlüklərindən istifadə edə bilməyəcəksiniz.</string>
    <string name="delete_account_confirm_heading">Hesabın silinməsi məcburi təsdiq tələb edir.</string>
    <string name="delete_account_instruction">SMS kodunu almaq üçün Birmarket-də qeydiyyatdan keçmiş telefon nömrəsini daxil edin.</string>
    <string name="delete_account_btn_proceed">İrəli</string>
    <string name="delete_account_btn_cancel">İmtina</string>
    <string name="delete_account_success">Hesabınız silindi</string>
    <string name="credit_applications_title">Kredit müraciətlərim</string>
    <string name="credit_empty">Kredit müraciətləri yoxdur</string>
    <string name="address_saved">Ünvanlarım</string>
    <string name="phone_label">Telefon nömrəsi</string>
    <string name="country_code_select">Ölkə kodu seçin</string>
    <string name="profile_my_orders">Mənim sifarişlərim</string>
    <string name="profile_my_cards">Mənim Kartlarım</string>
    <string name="profile_bir_id_desc">Bir ID profilinizi, məlumatlarınızı və tənzimləmələrinizi Bir ekosistemində idarə edin</string>
    <string name="profile_support_service">Dəstək xidməti</string>
    <string name="profile_pickup_list">Birmarket təhvil məntəqələrinin siyahısı</string>
    <string name="profile_faq_label">Ən çox verilən suallar</string>
    <string name="profile_delete_account_btn">Hesabı silmək</string>
    <string name="profile_version">Version 1.0.0</string>
    <string name="profile_city_baku">Bakı</string>
    <string name="profile_lang_az">Azərbaycan</string>
    <string name="login_desc">Alış-veriş etmək, sifarişləri izləmək və fərdi endirim­lər və bonuslardan istifadə etmək üçün.</string>
    <string name="user_default_name">İstifadəçi</string>
    <string name="home_search_hint">Məhsul axtar</string>
    <string name="home_delivery_free">Çatdırılma — 0 ₼</string>
    <string name="home_credit_installment">Kredit 0-0-12</string>
    <string name="home_pickup_points">toplama nöqtələrinə</string>
    <string name="home_all_products">bütün məhsullar üçün</string>
    <string name="home_recently_viewed">Əvvəl baxdıqlarınız</string>
    <string name="home_for_you">Sizin üçün seçdik</string>
    <string name="cart_select_all">Hamısını seçmək</string>
    <string name="cart_delete_selected">Seçilmişləri silin</string>
    <string name="cart_empty_title">Səbət boşdur</string>
    <string name="cart_empty_desc">Sizə lazım olan məhsulları tapmağınız üçün alış-verişə məhsul kataloquna keçərək başlayın</string>
    <string name="cart_catalog_btn">Məhsul kataloqu</string>
    <string name="cart_my_orders_btn">Mənim sifarişlərim</string>
    <string name="cart_recently_viewed">Əvvəl baxdıqlarınız</string>
    <string name="cart_for_you">Sizin üçün seçdik</string>
    <string name="cart_may_interest">Sizi maraqlandıra bilər</string>
    <string name="cart_order_amount">Sifarişin məbləği (0 məhsul):</string>
    <string name="cart_checkout">Sifarişi rəsmiləşdirmək</string>
    <string name="cart_checkout_credit">Sifarişi kreditlə rəsmiləşdirmək</string>
    <string name="favorites_login_required">Giriş tələb olunur</string>
    <string name="favorites_login_desc">Seçilmişləri görmək üçün hesabınıza daxil olun.</string>
    <string name="favorites_login_btn">Daxil olmaq</string>
    <string name="favorites_empty_title">SEÇİLMİŞLƏR bölümündə məhsul yoxdur</string>
    <string name="favorites_empty_desc">Məhsulların sürətlə əldə edilməsi üçün, onları SEÇİLMİŞLƏR bölümünə əlavə edin.</string>
    <string name="favorites_catalog_btn">Məhsul kataloqu</string>
    <string name="search_history_title">Axtarış tarixçəsi</string>
    <string name="search_clear_history">Silmək</string>
    <string name="search_no_results">Nəticə tapılmadı</string>
    <string name="category_default_title">Kateqoriya</string>
    <string name="category_product_count">0 məhsul</string>
    <string name="category_filter_filters">Filtrlər</string>
    <string name="category_filter_brand">Brend</string>
    <string name="category_filter_price">Qiymət</string>
    <string name="category_filter_discount">Endirimlə</string>
    <string name="category_no_results">Heç bir nəticə tapılmadı</string>
    <string name="category_try_other_filters">Digər filter parametrləri sınayın</string>
    <string name="order_summary_title">Sifarişin verilməsi</string>
    <string name="order_payment_method_header">ÖDƏNİŞ ÜSULU</string>
    <string name="order_pay_online_title">Bank kartı vasitəsi ilə onlayn</string>
    <string name="order_pay_online_subtitle">Onlayn ödəmək</string>
    <string name="order_credit_label">Kredit</string>
    <string name="order_select_payment_btn">Başqa ödəniş üsulu seçmək</string>
    <string name="order_credit_terms_header">BIR KREDİT BOKT MMC-DƏN KREDİT ŞƏRTLƏRI</string>
    <string name="order_monthly_payment_label">Aylıq ödəniş 01.06-dan etibarən:</string>
    <string name="order_credit_info_header">KREDİTİN VERİLMƏSİ ÜÇÜN MƏLUMATLAR</string>
    <string name="order_credit_first_name_hint">Ad</string>
    <string name="order_credit_last_name_hint">Soyad</string>
    <string name="order_credit_phone_hint">Telefon</string>
    <string name="order_credit_fin_hint">FİN-kod</string>
    <string name="order_credit_section_header">SİFARİŞ</string>
    <string name="order_credit_order_label">Sifarişin məbləği (1 məhsul):</string>
    <string name="order_discount_label">Endirim:</string>
    <string name="order_delivery_label">Çatdırılma:</string>
    <string name="order_birbank_section_header">SİFARİŞ</string>
    <string name="order_birbank_installment_label">Taksit:</string>
    <string name="order_total_payment_label">Toplam ödəniş:</string>
    <string name="order_buyer_contacts_header">ALICI KONTAKTLARI</string>
    <string name="order_promo_header">PROMOKOD</string>
    <string name="order_use_promo">Promokoddan istifadə etmək istəyirəm</string>
    <string name="order_promo_hint">Promokodu daxil edin</string>
    <string name="order_promo_note">Promokod tətbiq olunmadan ödəniş mümkündür</string>
    <string name="order_total_label">Toplam ödəniş:</string>
    <string name="order_legal_text">Davam etməklə, siz şəxsi məlumatlarınızın toplanması və emalı ilə razılaşırsınız və OneMarket-in istifadə və ödəniş şərtləri ilə razılaşırsınız</string>
    <string name="order_consent_text">Məlumatların doğruluğunu təsdiqləyirəm və AKB-dən və digər dövlət qurumlarından məlumatlarımın alınmasına, OneMarket istifadə qaydalarına uyğun haqqımda məlumat toplanmasına razılıq verirəm</string>
    <string name="my_orders_title">Mənim sifarişlərim</string>
    <string name="my_orders_empty">Hələ sifariş yoxdur</string>
    <string name="order_detail_order_label">Sifariş</string>
    <string name="order_detail_delivery_title">Çatdırılma</string>
    <string name="order_detail_delivery_address">Çatdırılma ünvanı</string>
    <string name="order_detail_cancel_btn">Sifarişi ləğv et</string>
    <string name="add_card_type_bank">Bank kartı</string>
    <string name="card_detail_title">Kart məlumatları</string>
    <string name="card_detail_type_label_visual">Bank kartı</string>
    <string name="card_detail_holder_label">Kart sahibi</string>
    <string name="card_detail_expiry_label_visual">Bitmə tarixi</string>
    <string name="card_detail_type_row">Kart növü</string>
    <string name="card_detail_number_row">Kart nömrəsi</string>
    <string name="card_detail_expiry_row">Bitmə tarixi</string>
    <string name="card_detail_cvv_tap">Görmək üçün klikləyin</string>
    <string name="card_detail_added_label">Əlavə edilib</string>
    <string name="card_detail_delete_btn">Kartı sil</string>
    <string name="notifications_title">Bildirişlər</string>
    <string name="notifications_tab_all">Hamısı</string>
    <string name="notifications_tab_orders">Sifarişlər</string>
    <string name="notifications_empty">Bildiriş yoxdur</string>
</resources>