<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/catalogFragment"
        android:icon="@drawable/ic_nav_catalog"
        android:title="@string/nav_catalog" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_nav_favorites"
        android:title="@string/nav_favorites" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/nav_cart" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>
